# yunsh-os

./: .gitignore  BUILD.md  README.md
android/: install-appstore.sh  waydroid.cfg  yunsh-android-bridge.py
boot/: config.txt  kms-config.json  yunsh-firstboot.sh  yunsh-iptables.sh  yunsh-ssh-config.conf
compositor/: CMakeLists.txt  compositor.cpp  compositor.h  main.cpp
compositor/shaders/: fullscreen.vert  glass.frag
docs/: YUNSH-OS-操作指南.md
scripts/: build-image-from-rpi-os.sh  build-image-workflow.yml  build-no-hdiutil.sh  fix-config.py  flash-mac.sh  inject-boot-fix.py  inject-boot-mtools.sh  inject-boot-simple.sh  inject-boot.py  inject-boot2.py  process-logo.py  process-logo.sh  yunsh-boot-activate.sh
system/: S01yunsh-boot  S02yunsh-update  yunsh-activation-helper  yunsh-appd.py  yunsh-appd.service  yunsh-bluetooth-daemon.py  yunsh-bno085-reader  yunsh-disk-helper  yunsh-disk-helper.service  yunsh-factory-reset  yunsh-firewall.service  yunsh-headtracking  yunsh-headtracking-sim  yunsh-icm-reader  yunsh-inputd  yunsh-install-progress.sh  yunsh-launcher.cpp  yunsh-logrotate.conf  yunsh-network-daemon.py  yunsh-powerd  yunsh-screenshotd  yunsh-splash  yunsh-terminal.py  yunsh-terminal.service  yunsh-update-daemon.py  yunsh-updater.py
ui/: AboutScreen.qml  ActivationScreen.qml  AppDock.qml  AppIcon.qml  BluetoothScreen.qml  CMakeLists.txt  ControlCenter.qml  DropShadowEffect.qml  EditMenu.qml  EditableField.qml  EditableInput.qml  GlassBackground.qml  GlassCard.qml  GlassEffect.qml  GlassPanel.qml  GlassWindow.qml  HomeIndicator.qml  HomeScreen.qml  MacWindow.qml  NetworkScreen.qml  PhotosScreen.qml  Screensaver.qml  ScreenshotOverlay.qml  SettingsScreen.qml  StatusBar.qml  SystemInfoScreen.qml  TaskSwitcher.qml  TerminalScreen.qml  UpdateHistoryScreen.qml  UpdateScreen.qml  VirtualKeyboard.qml  YunshBrowser.qml  YunshMetaverse.qml  main.cpp  main.qml
